--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html,
         @media screen and (max-width: 540px) {
             span {
                 font-size: 45px;
+                    position:fixed;
             }
 
             canvas {
